# UltraSafe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  accounts.md  docker-compose.yml  package-lock.json  pyproject.toml
docs/: architecture.md  backend-refactor-runthrough.md  claim-document-extraction-handoff.md  claim-review-flow.md  contract-case-context.example.json  contract-context.md  contract-template.json  demo-checklist.md  demo-recording.md  developer-handoff.md  domain-model.md  frontend-source-of-truth-audit.md  llm-generation.md  quote-context.md  repo-boilerplate.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: db_migrate.sh  db_seed_demo.sh  install_demo_artifacts.sh
sql/: 000_test_database.sql  001_init_schema.sql  002_seed_demo_data.sql  003_claim_requests.sql  004_quote_requests.sql  005_quote_documents.sql  006_intelligence_schema.sql  007_intelligence_template_review_candidates.sql  008_intelligence_sources.sql  009_demo_intelligence_events.sql  010_legal_document_sources.sql  011_normalized_legal_documents.sql  012_legal_demo_template_metadata.sql  013_legal_document_template_review_candidates.sql  014_template_change_suggestions.sql  015_template_draft_revisions.sql  016_claim_precheck_statuses.sql  017_contract_quote_lifecycle.sql  017_underwriting_rules.sql  018_generated_document_metadata.sql  019_generated_document_pdf_metadata.sql  020_template_change_suggestion_hunk_context.sql  022_customer_profile_audit.sql  (+19 more)
(+377 files in other folders)
