[project]
name = "underwright"
version = "0.1.0"
description = "UltraSafe insurance workflow application."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "openai>=1.0",
  "pydantic[email]>=2.0",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.2",
  "bcrypt>=4.1",
  "PyJWT>=2.8",
  "uvicorn>=0.30"
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.12",
]

[project.scripts]
cli = "underwright.cli:main"
seed-legal-demo-data = "underwright.legal_demo_seed.cli:main"
underwright-ingest = "underwright.ingestion.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"
